# mam_eurobot_2026

./: .gitignore  CMakeLists.txt  commande.md  commande.txt  frames_2025-11-25_14.56.33.gv  frames_2025-11-25_19.41.31.gv  frames_2025-12-02_20.19.34.gv  frames_2025-12-02_20.36.55.gv  frames_2025-12-02_20.48.43.gv  frames_2025-12-03_00.06.02.gv  frames_2026-01-19_18.17.31.gv  launch_rviz.sh  my_arena_map.pgm  my_arena_map.yaml  mymap.pgm  mymap.yaml  package.xml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
Documentation/: Mechanical CAD.txt  README.md  ROBO-UN Documentation Structure.txt
Documentation/5- Appendix and technical data/: BOM1.xlsx  ROBO-UN Documentation Structure.txt
config/: slam_rviz.rviz
config/gripper/: gripper_params.yaml
config/mecanum/: mecanum_drive_controller.yaml
config/nav2/: nav2_params.yaml
config/slam/: mapper_params_online_async.yaml
launch/: arena.launch.py  combined.launch.py  gripper.launch.py  nav2.launch.py  slam.launch.py  spawn_mecanum.launch.py  test_mecanum.launch.py
mam_eurobot_2026/: auto_move.py  commande.txt  half_spin.py  key_ctrl.py  open_cv_cam.py  py_test.py  test_movement.py
mam_eurobot_2026/Move/: gripper_controller.py
mam_eurobot_2026/Perception/: cam_view.py
mam_eurobot_2026/Task_Planner/: main_strategy.py
mam_eurobot_2026/launch/: arena.launch.py
mam_eurobot_2026/testing_zad/: aruco_detection_manual.py  camera_looping_image_selection.py
models/beacons/: beaconB.sdf  beaconY.sdf  model.config
models/crate/: crate_aruco.sdf  model.sdf
src/: cpp_test.cpp
worlds/: arena_world.sdf
(+24 files in other folders)
